[project]
name = "hello-world"
version = "0.1.0"
description = "An init project on langchain"
authors = [
    {name = "Michel, Luiza"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-ollama (>=0.3.8,<0.4.0)",
    "psycopg[binary] (>=3.1.0,<4.0.0)",
    "pgvector (>=0.2.1,<0.3.0)",
    "pypdf (>=4.0.0,<5.0.0)",
    "sentence-transformers (>=2.2.0,<3.0.0)",
    "langchain-postgres (>=0.0.9,<0.1.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
